--- a/index.html
+++ b/index.html
@@ -28,13 +28,12 @@
 </head>
 <body background="papel.webp">
 
-    <h1 class="btn btn-primary h">JOGO DE PING PONG</h1>
-    <h2 class="i"> para jogar, permita o acesso a câmera, aperte espaço e mova a raquete para cima e para baixo <br> Você marca pontos toca vez que consegue rebater a bola </h2>
-    <center>
-        <div id="canvas"></div>   
-        <div id="video"></div>
-    </center>
+     <!--CRIE UM BOTÃO PARA INICIAR O JOGO-->
     
+
+     <!--CRIE UMA DIV COM ID CANVAS -->
+
+     <!--CRIE UMA DIV COM ID VIDEO-->
     
     <script src="main.js"></script>
 </body>
